[package]
name = "ref_tool"
version = "0.1.0"
authors = ["cojue"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.3", features=["image", "canvas", "tokio", "debug", "svg"]}
nfd = "0.0.4"
rand = "0.8.4"
lazy_static = "1.4.0"