[package]
name = "ref_tool"
version = "0.2.0"
authors = ["cojuer"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.9", features=["image", "canvas", "tokio", "debug", "svg"]}
nfd = "0.0.4"
rand = "0.8.4"
once_cell = "1.17.1"